--- a/common_crawl/notebook/process_file_froms3.ipynb
+++ b/common_crawl/notebook/process_file_froms3.ipynb
@@ -11,7 +11,9 @@
      "text": [
       "Existing buckets:\n",
       "  aws-emr-resources-235671948910-us-east-1\n",
+      "  aws-logs-235671948910-eu-north-1\n",
       "  aws-logs-235671948910-us-east-1\n",
+      "  privacy-emroutput-bucket\n",
       "  privacylost\n",
       "  zhan-commoncrawl\n"
      ]
@@ -38,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ResponseMetadata': {'RequestId': 'BZM2KCKH4326JQVA', 'HostId': '1kB7SvVhYRd2xqGUTpjbXa8OuGGILV6SXjTBTok+zqtGnSDBrXt1uC1LuzZKn+qYlgMCNRVVv7A=', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amz-id-2': '1kB7SvVhYRd2xqGUTpjbXa8OuGGILV6SXjTBTok+zqtGnSDBrXt1uC1LuzZKn+qYlgMCNRVVv7A=', 'x-amz-request-id': 'BZM2KCKH4326JQVA', 'date': 'Mon, 23 Jan 2023 09:12:03 GMT', 'content-type': 'application/xml', 'transfer-encoding': 'chunked', 'server': 'AmazonS3'}, 'RetryAttempts': 0}, 'Owner': {'DisplayName': 'sara', 'ID': 'fc504895e3c44cbe2a063212bf4f392a0c24a398910f6f535ec911c404ee8347'}, 'Grants': [{'Grantee': {'DisplayName': 'sara', 'ID': 'fc504895e3c44cbe2a063212bf4f392a0c24a398910f6f535ec911c404ee8347', 'Type': 'CanonicalUser'}, 'Permission': 'FULL_CONTROL'}]}\n"
+      "{'ResponseMetadata': {'RequestId': 'YG2PZ7XC55JFB8J6', 'HostId': 'gwTKGYyoAN5xBdhyer4O8cWS363Si7g1hZqCT0m3RUEQWSA2WLgMrQZiBGSDs4Lav1k4uil3tmI=', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amz-id-2': 'gwTKGYyoAN5xBdhyer4O8cWS363Si7g1hZqCT0m3RUEQWSA2WLgMrQZiBGSDs4Lav1k4uil3tmI=', 'x-amz-request-id': 'YG2PZ7XC55JFB8J6', 'date': 'Mon, 13 Mar 2023 21:36:35 GMT', 'content-type': 'application/xml', 'transfer-encoding': 'chunked', 'server': 'AmazonS3'}, 'RetryAttempts': 0}, 'Owner': {'DisplayName': 'sara', 'ID': 'fc504895e3c44cbe2a063212bf4f392a0c24a398910f6f535ec911c404ee8347'}, 'Grants': [{'Grantee': {'DisplayName': 'sara', 'ID': 'fc504895e3c44cbe2a063212bf4f392a0c24a398910f6f535ec911c404ee8347', 'Type': 'CanonicalUser'}, 'Permission': 'FULL_CONTROL'}]}\n"
      ]
     }
    ],
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +73,10 @@
    "source": [
     "from warcio.archiveiterator import ArchiveIterator\n",
     "for record in ArchiveIterator(resp):\n",
+    "    print(\"hello\")\n",
     "    url = record.rec_headers.get_header(\"WARC-Target-URI\")\n",
-    "    text = record.content_stream().read()"
+    "    text = record.content_stream().read()\n",
+    "    print(text)"
    ]
   },
   {
