--- a/common_crawl/notebook/track_evolution.ipynb
+++ b/common_crawl/notebook/track_evolution.ipynb
@@ -396,20 +396,396 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tracker_2012</th>\n",
+       "      <th>tracker_2013</th>\n",
+       "      <th>tracker_2014</th>\n",
+       "      <th>tracker_2015</th>\n",
+       "      <th>tracker_2016</th>\n",
+       "      <th>tracker_2017</th>\n",
+       "      <th>tracker_2018</th>\n",
+       "      <th>tracker_2019</th>\n",
+       "      <th>tracker_2020</th>\n",
+       "      <th>tracker_2021</th>\n",
+       "      <th>10_years_increased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>17975.00000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.23121</td>\n",
+       "      <td>1.461530</td>\n",
+       "      <td>1.607955</td>\n",
+       "      <td>1.819249</td>\n",
+       "      <td>2.075494</td>\n",
+       "      <td>2.235994</td>\n",
+       "      <td>2.393324</td>\n",
+       "      <td>2.442503</td>\n",
+       "      <td>2.442615</td>\n",
+       "      <td>2.394715</td>\n",
+       "      <td>0.945009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.38979</td>\n",
+       "      <td>1.561134</td>\n",
+       "      <td>1.641583</td>\n",
+       "      <td>1.746187</td>\n",
+       "      <td>1.892554</td>\n",
+       "      <td>1.982073</td>\n",
+       "      <td>2.052840</td>\n",
+       "      <td>2.070558</td>\n",
+       "      <td>2.073890</td>\n",
+       "      <td>2.059595</td>\n",
+       "      <td>0.481947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>inf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>12.00000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       tracker_2012  tracker_2013  tracker_2014  tracker_2015  tracker_2016  \\\n",
+       "count   17975.00000  17975.000000  17975.000000  17975.000000  17975.000000   \n",
+       "mean        1.23121      1.461530      1.607955      1.819249      2.075494   \n",
+       "std         1.38979      1.561134      1.641583      1.746187      1.892554   \n",
+       "min         0.00000      0.000000      0.000000      0.000000      0.000000   \n",
+       "25%         0.00000      0.000000      0.000000      0.000000      1.000000   \n",
+       "50%         1.00000      1.000000      1.000000      1.000000      2.000000   \n",
+       "75%         2.00000      2.000000      2.000000      3.000000      3.000000   \n",
+       "max        12.00000     12.000000     13.000000     13.000000     14.000000   \n",
+       "\n",
+       "       tracker_2017  tracker_2018  tracker_2019  tracker_2020  tracker_2021  \\\n",
+       "count  17975.000000  17975.000000  17975.000000  17975.000000  17975.000000   \n",
+       "mean       2.235994      2.393324      2.442503      2.442615      2.394715   \n",
+       "std        1.982073      2.052840      2.070558      2.073890      2.059595   \n",
+       "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+       "25%        1.000000      1.000000      1.000000      1.000000      1.000000   \n",
+       "50%        2.000000      2.000000      2.000000      2.000000      2.000000   \n",
+       "75%        3.000000      4.000000      4.000000      4.000000      4.000000   \n",
+       "max       16.000000     15.000000     14.000000     15.000000     18.000000   \n",
+       "\n",
+       "       10_years_increased  \n",
+       "count            0.000000  \n",
+       "mean             0.945009  \n",
+       "std              0.481947  \n",
+       "min                   NaN  \n",
+       "25%                   inf  \n",
+       "50%              1.000000  \n",
+       "75%              1.000000  \n",
+       "max              0.500000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df_edu_des['10_years_increased'] = (df_edu_des['tracker_2021'] - df_edu_des['tracker_2012']) / df_edu_des['tracker_2012']\n",
-    "# df_edu_des"
+    "df_edu_des['10_years_increased'] = (df_edu_des['tracker_2021'] - df_edu_des['tracker_2012']) / df_edu_des['tracker_2012']\n",
+    "df_edu_des"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tracker_2012</th>\n",
+       "      <th>tracker_2013</th>\n",
+       "      <th>tracker_2014</th>\n",
+       "      <th>tracker_2015</th>\n",
+       "      <th>tracker_2016</th>\n",
+       "      <th>tracker_2017</th>\n",
+       "      <th>tracker_2018</th>\n",
+       "      <th>tracker_2019</th>\n",
+       "      <th>tracker_2020</th>\n",
+       "      <th>tracker_2021</th>\n",
+       "      <th>10_years_increased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>17975.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.650904</td>\n",
+       "      <td>1.832990</td>\n",
+       "      <td>1.968456</td>\n",
+       "      <td>2.105647</td>\n",
+       "      <td>2.269374</td>\n",
+       "      <td>2.328901</td>\n",
+       "      <td>2.338748</td>\n",
+       "      <td>2.292017</td>\n",
+       "      <td>2.264979</td>\n",
+       "      <td>2.167789</td>\n",
+       "      <td>0.313092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.028209</td>\n",
+       "      <td>2.151007</td>\n",
+       "      <td>2.215058</td>\n",
+       "      <td>2.229944</td>\n",
+       "      <td>2.285772</td>\n",
+       "      <td>2.295049</td>\n",
+       "      <td>2.267500</td>\n",
+       "      <td>2.227045</td>\n",
+       "      <td>2.167347</td>\n",
+       "      <td>2.121438</td>\n",
+       "      <td>0.045966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>18.000000</td>\n",
+       "      <td>0.125000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       tracker_2012  tracker_2013  tracker_2014  tracker_2015  tracker_2016  \\\n",
+       "count  17975.000000  17975.000000  17975.000000  17975.000000  17975.000000   \n",
+       "mean       1.650904      1.832990      1.968456      2.105647      2.269374   \n",
+       "std        2.028209      2.151007      2.215058      2.229944      2.285772   \n",
+       "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+       "25%        0.000000      0.000000      0.000000      0.000000      1.000000   \n",
+       "50%        1.000000      1.000000      1.000000      2.000000      2.000000   \n",
+       "75%        2.000000      3.000000      3.000000      3.000000      3.000000   \n",
+       "max       16.000000     16.000000     17.000000     18.000000     19.000000   \n",
+       "\n",
+       "       tracker_2017  tracker_2018  tracker_2019  tracker_2020  tracker_2021  \\\n",
+       "count  17975.000000  17975.000000  17975.000000  17975.000000  17975.000000   \n",
+       "mean       2.328901      2.338748      2.292017      2.264979      2.167789   \n",
+       "std        2.295049      2.267500      2.227045      2.167347      2.121438   \n",
+       "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+       "25%        1.000000      1.000000      1.000000      1.000000      0.000000   \n",
+       "50%        2.000000      2.000000      2.000000      2.000000      2.000000   \n",
+       "75%        3.000000      4.000000      3.000000      3.000000      3.000000   \n",
+       "max       21.000000     27.000000     19.000000     16.000000     18.000000   \n",
+       "\n",
+       "       10_years_increased  \n",
+       "count            0.000000  \n",
+       "mean             0.313092  \n",
+       "std              0.045966  \n",
+       "min                   NaN  \n",
+       "25%                   NaN  \n",
+       "50%              1.000000  \n",
+       "75%              0.500000  \n",
+       "max              0.125000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df_control_des['10_years_increased'] = (df_control_des['tracker_2021'] - df_control_des['tracker_2012']) / df_control_des['tracker_2012']\n",
-    "# df_control_des"
+    "df_control_des['10_years_increased'] = (df_control_des['tracker_2021'] - df_control_des['tracker_2012']) / df_control_des['tracker_2012']\n",
+    "df_control_des"
    ]
   },
   {
@@ -2211,7 +2587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Mar 28 2022, 11:38:47) \n[GCC 7.5.0]"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
