--- a/common_crawl/notebook/distribution.ipynb
+++ b/common_crawl/notebook/distribution.ipynb
@@ -1481,6 +1481,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1547,6 +1548,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1621,7 +1623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5 (default, Jun  4 2021, 12:28:51) \n[GCC 7.5.0]"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
